# ClipSync

./: .editorconfig  .env.development  .env.development.example  .gitignore  .prettierrc  CHECKLIST_FAVORITES_DND.md  CHECKLIST_FAVORITES_I18N_PIN.md  CLIPBOARD_CONCURRENCY_CHECKLIST.md  FRONTEND_FIX_DELIVERY_REPORT.md  IDEA.md  IMAGE_SYNC_AUDIT_CHECKLIST.md  MISSING_FEATURES_DESKTOP.md  NOTIFICATIONS_WIRING_CHECKLIST.md  README.md  UI_AUDIT_REPORT.md  dev-server.py  device_result.json  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.multi.yml  docker-compose.prod.yml  docker-compose.yml  fix-api.py  fix-settings.py  generate_new_index.py  modify_instructions.py  package-lock.json  package.json  surgical_fix.py
.reasonix/: desktop-topic-auto-title-meta.json  desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
StreamApiTest/: workspace.yml
backups/: users_data_20260629.csv
clipboard-dump/: Cargo.toml
data/: backup_20260626_093500.sql
docs/: CONCURRENCY_AUDIT.md  FRONTEND_AUDIT_REPORT.md  FRONTEND_FIX_DELIVERY_REPORT.md  IMAGE_SYNC_AUDIT_CHECKLIST.md  MISSING_FEATURES_DESKTOP.md  README.md  SYSTEM_AUDIT.md  UI-LIBRARY-AUDIT.md  android-performance-optimization-guide.md  api-reference.md  code-review-report.md  codebase-analysis-report.md  commercial-readiness-review.md  compliance-audit-report.md  comprehensive-audit-summary.md  (+31 more)
src/bak/old/desktop/src-tauri/: Cargo.toml  tauri.conf.json
src/bak/old/desktop/src-tauri/capabilities/: default.json
src/bak/old/desktop/src-tauri/tests/: integration_test.rs
(+684 files in other folders)
