[package]
name = "clipsync-desktop"
version = "0.1.0"
description = "ClipSync Desktop - Cross-device clipboard synchronization"
authors = ["ClipSync"]
edition = "2021"

# 性能优化：启用 LTO 和减少二进制大小
[profile.release]
lto = true  # 启用链接时优化（减少二进制大小 20-30%）
codegen-units = 1  # 减少代码生成单元（提高优化效果）
opt-level = 3  # 最高优化级别
panic = 'abort'  # 使用 abort 替代 unwind（减少二进制大小）
strip = true  # 删除调试符号（减少二进制大小 10-20%）

[lib]
name = "clipsync_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clipboard-win = { version = "5", features = ["std"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
aes-gcm = "0.10"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "bmp"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
png = "0.17"

# Windows 专用：调用 DWM API 给系统标题栏着色
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
] }
